--- a/configServer/config-repo/compte.yaml
+++ b/configServer/config-repo/compte.yaml
@@ -1,15 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dafMicro?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/AppMicroCompte?useSSL=false&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
-      org:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
+      dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
   cloud:
     discovery:
@@ -25,4 +23,4 @@ spring:
         lease-renewal-interval-in-seconds: 10
         lease-expiration-duration-in-seconds: 30
 server:
-  port: 8085
+  port: 8089
