--- a/configServer/config-repo/daf.yaml
+++ b/configServer/config-repo/daf.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dafMicro?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/dafMicro?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
