--- a/configServer/config-repo/appMicro.yaml
+++ b/configServer/config-repo/appMicro.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/appMicroDb?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/appMicroDb?useSSL=false&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,6 +14,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eurekaserver:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
