--- a/configServer/config-repo/compte.yaml
+++ b/configServer/config-repo/compte.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/AppMicroCompte?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/AppMicroCompte?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -10,7 +10,7 @@ spring:
       dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
   rabbitmq:
-    host: 127.0.0.1
+    host: rabbitmq
     port: 5672
     username: marakhib
     password: marakhib
@@ -20,7 +20,7 @@ spring:
     eureka:
       client:
         service-url:
-          defaultZone: http://localhost:8761/eureka/
+          defaultZone: http://eurekaserver:8761/eureka/
         register-with-eureka: true
         fetch-registry: true
       instance:
