--- a/configServer/config-repo/daf.yaml
+++ b/configServer/config-repo/daf.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dafMicro?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/dafMicro?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,7 +17,7 @@ spring:
     eureka:
       client:
         service-url:
-          defaultZone: http://localhost:8761/eureka/
+          defaultZone: http://eurekaserver:8761/eureka/
         register-with-eureka: true
         fetch-registry: true
       instance:
