--- a/configServer/config-repo/transfert.yaml
+++ b/configServer/config-repo/transfert.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/AppMicroTransfert?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://mysql:3306/AppMicroTransfert?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: marakhib
     password: Marakhib
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,7 +11,7 @@ spring:
     show-sql: true
 
   rabbitmq:
-    host: 127.0.0.1
+    host: rabbitmq
     port: 5672
     username: marakhib
     password: marakhib
@@ -22,7 +22,7 @@ spring:
     eureka:
       client:
         service-url:
-          defaultZone: http://localhost:8761/eureka/
+          defaultZone: http://eurekaserver:8761/eureka/
         register-with-eureka: true
         fetch-registry: true
       instance:
