--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: AppMicro
   config:
-    import: "optional:configserver:http://localhost:8889"
+    import: "optional:configserver:http://configserver:8889"
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
