--- a/compte/src/main/resources/application.yaml
+++ b/compte/src/main/resources/application.yaml
@@ -3,4 +3,4 @@ spring:
     name: compte
 
   config:
-    import: "configserver:http://localhost:8889"
+    import: "configserver:${CONFIG_SERVER_URL:http://localhost:8889}"
