--- a/daf/src/main/resources/application.yaml
+++ b/daf/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   application:
     name: daf
   config:
-    import: "configserver:http://localhost:8889"
+    import: "configserver:${CONFIG_SERVER_URL:http://localhost:8889}"
