--- a/configServer/config-repo/daf.yaml
+++ b/configServer/config-repo/daf.yaml
@@ -14,6 +14,16 @@ spring:
 server:
   port: 8085
 
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+
 eureka:
   client:
     service-url:
