--- a/compte/Dockerfile
+++ b/compte/Dockerfile
@@ -6,8 +6,10 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
+RUN apk add --no-cache curl
 COPY --from=build /app/target/compte-0.0.1-SNAPSHOT.jar compte.jar
 EXPOSE 8089
-ENTRYPOINT ["java", "-jar", "compte.jar"]
+ENV JAVA_OPTS="-Xmx256m -Xms128m"
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar compte.jar"]
