--- a/configServer/config-repo/transfert.yaml
+++ b/configServer/config-repo/transfert.yaml
@@ -13,7 +13,7 @@ spring:
     host: rabbitmq
     port: 5672
     username: marakhib
-    password: marakhib
+    password: Marakhib
 
   cloud:
     discovery:
@@ -37,6 +37,16 @@ spring:
 
 server:
   port: 8099
+
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
 
 eureka:
   client:
