--- a/configServer/src/main/resources/application.yaml
+++ b/configServer/src/main/resources/application.yaml
@@ -7,7 +7,11 @@ spring:
     config:
       server:
         native:
-          search-locations: file:./config-repo/
+          location: file:/app/config-repo/
+        filesystem:
+          enabled: true
+          search-locations: file:/app/config-repo/
+        bootstrap: false
 management:
   endpoints:
     web:
