--- a/daf/Dockerfile
+++ b/daf/Dockerfile
@@ -6,8 +6,10 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 
-FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
+RUN apk add --no-cache curl
 COPY --from=build /app/target/daf-0.0.1-SNAPSHOT.jar daf.jar
 EXPOSE 8085
-ENTRYPOINT ["java", "-jar", "daf.jar"]
+ENV JAVA_OPTS="-Xmx256m -Xms128m"
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar daf.jar"]
